ajustando code smell do projeto